--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "pomodoro-clock",
   "version": "1.0.0",
+  "homepage": "https://anthonyshew.github.io/pomodoro-clock",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
@@ -11,6 +13,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
